--- a/styles/hope_util.less
+++ b/styles/hope_util.less
@@ -4,11 +4,38 @@
 @width_content: 1440px;
 
 
+// =======================================================
+//    Sizes
+// =======================================================
+@home-max-width-SM: 640px;
+@home-max-width-MD: 960px;
+@home-max-width-LG: 1280px;
+@home-max-width-XL: 1440px;
+
+@home-padding-top-MD: 120px;
+@home-padding-top-LG: 240px;
+@home-padding-top-XL: 360px;
+@home-padding-top-XXL: 480px;
+
+@home-border-width-SM: 10em;
+@home-border-width-MD: 13em;
+@home-border-width-LG: 17em;
+@home-border-width-XL: 20em;
+@home-border-width-XXL: 25em;
+
 
 // =======================================================
 //    Color Palette
 // =======================================================
 @nav_bg: rgba(71,145,210,1);
+
+
+// https://color.adobe.com/paleta001-color-theme-13608531
+@color__adobe1: #C85B6C;
+@color__adobe2: #FE7568;
+@color__adobe3: #FCCA6C;
+@color__adobe4: #548FCC;
+@color__adobe5: #315B8A;
 
 
 
