adjustments to hope blog

--- a/styles/hope_blog.less
+++ b/styles/hope_blog.less
@@ -3,14 +3,6 @@
     visibility: hidden !important;
 }
 
-.clearfix::after {
-  content: "";
-  clear: both;
-  display: table;
-}
-
-
-
 
 
 .hope_blog-index {
@@ -42,19 +34,19 @@
                 box-sizing: border-box;
                 -webkit-backface-visibility: hidden;
 
-                .hope_thumbnail {
+                .index_thumbnail {
                     width: 100%;
                     height: 65%;
                     overflow: hidden;
     
-                    .hope_no_image {
+                    .index_noimage {
                         display: block;
                         width: 100%;
                         height: 100%;
                         background: lightgray;
                     }
     
-                    .hope_image-wrapper {
+                    .index_thumbnail-wrapper {
                         width: 120%;
                         height: 120%;
                         margin-left: -10%;
