--- a/styles/hope_util.less
+++ b/styles/hope_util.less
@@ -38,12 +38,18 @@
 @color__adobe5: #315B8A;
 
 
+// =======================================================
+//    Global
+// =======================================================
+.clearfix::after {
+  content: "";
+  clear: both;
+  display: table;
+}
 
 // =======================================================
 //    Full Bleed Effect
 // =======================================================
-
-
 .sermons-full-bleed-horizontal (@padding, @max) when (@padding > @max) {
   left: -@max;
 }
@@ -65,14 +71,12 @@
         .sermons-full-bleed-horizontal (@padding, @paddingS);
     }
 }
-// -----------------------------------------
 
 
 
 // =======================================================
 //    Grid System
 // =======================================================
-
 .col {
     float: left;
     padding-left: 1.5%;
