--- a/styles/hope_blog.less
+++ b/styles/hope_blog.less
@@ -58,6 +58,11 @@
                     }
                 }
 
+                &:hover > .index_thumbnail-wrapper {
+                    width: 100%;
+                    height: 100%;
+                }
+
                 .index_context {
                     display: block;
                     height: 20%;
