adjustments to hope blog

--- a/styles/hope_blog.less
+++ b/styles/hope_blog.less
@@ -59,8 +59,7 @@
                 }
 
                 &:hover > .index_thumbnail-wrapper {
-                    width: 100%;
-                    height: 100%;
+                    transform: scale(0.9);
                 }
 
                 .index_context {
