adjustments to hope blog

--- a/styles/hope_blog.less
+++ b/styles/hope_blog.less
@@ -58,7 +58,7 @@
                     }
                 }
 
-                &:hover > .index_thumbnail-wrapper {
+                &:hover .index_thumbnail-wrapper {
                     transform: scale(0.9);
                 }
 
