adjustments to hope blog

--- a/styles/hope_blog.less
+++ b/styles/hope_blog.less
@@ -8,8 +8,9 @@
 .hope_blog-index {
     position: absolute;
     width: 50%;
+    min-height: 100vh;
     
-    .hope_blog-container {
+    .index_container {
         padding: 1em;
         background-color: #ededed;
         box-sizing: border-box;
@@ -24,7 +25,6 @@
             overflow: hidden;
             background-color: transparent;
             
-
             .index_link {
                 display: block;
                 height: 100%;
@@ -75,9 +75,17 @@
                     }
                 }
 
-            } 
-        } 
-
-
-    } 
+            }
+        }
+    }
 } 
+
+
+
+
+.hope_blog-view {
+    position: relative;
+    width: 50%;
+    height: 100vh;
+}
+
