adjustments to hope blog

--- a/styles/hope_blog.less
+++ b/styles/hope_blog.less
@@ -3,10 +3,13 @@
     visibility: hidden !important;
 }
 
+.hope_blog-page {
+    display: flex;
+}
 
 
 .hope_blog-index {
-    position: absolute;
+    position: relative;
     width: 50%;
     min-height: 100vh;
     
