--- a/styles/hope_blog.less
+++ b/styles/hope_blog.less
@@ -7,6 +7,27 @@
     display: flex;
 }
 
+    
+
+.hope_noimage {
+    display: block;
+    width: 100%;
+    height: 100%;
+    background: lightgray;
+}
+
+.hope_image-wrapper {
+    width: 120%;
+    height: 120%;
+    margin-left: -10%;
+    margin-top: -5%;
+    transition-property: all;
+    transition-duration: .4s;
+    transition-timing-function: cubic-bezier(.33,0,.2,1);
+    -transition-delay: 0;
+}
+
+
 
 .hope_blog-index {
     position: relative;
@@ -41,27 +62,9 @@
                     width: 100%;
                     height: 65%;
                     overflow: hidden;
-    
-                    .index_noimage {
-                        display: block;
-                        width: 100%;
-                        height: 100%;
-                        background: lightgray;
-                    }
-    
-                    .index_thumbnail-wrapper {
-                        width: 120%;
-                        height: 120%;
-                        margin-left: -10%;
-                        margin-top: -5%;
-                        transition-property: all;
-                        transition-duration: .4s;
-                        transition-timing-function: cubic-bezier(.33,0,.2,1);
-                        -transition-delay: 0;
-                    }
                 }
 
-                &:hover .index_thumbnail-wrapper {
+                &:hover .hope_image-wrapper {
                     transform: scale(0.9);
                 }
 
