adjustments to hope blog

--- a/styles/hope_blog.less
+++ b/styles/hope_blog.less
@@ -93,5 +93,18 @@
     position: relative;
     width: 50%;
     height: 100vh;
+
+    .view_container {
+        background-color: #fff;
+        box-sizing: border-box;
+        height: 100%;
+
+
+        .view_header {
+            height: 100%;
+            overflow: hidden;
+            box-sizing: border-box;
+        }
+    }
 }
 
